--- a/.github/workflows/scrape.yaml
+++ b/.github/workflows/scrape.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: "0 8,20 * * *"  # 📅 Scrape twice a day at 8AM and 8PM UTC
+    - cron: "0 17 * * *"  # 📅 Scrape once a day at 5PM UTC
 
 name: Scrape Update 🔄
 jobs:
